# cpp_project

./: README.md  ТЗ.txt  странные_моменты.txt
sound_processor/: CMakeLists.txt
sound_processor copy/src/app/: application.cpp  application.h
sound_processor copy/src/args/: args_parser.cpp  args_parser.h
sound_processor copy/src/converter/: converter.cpp  converter.h
sound_processor copy/src/filter_producers/: filter_producers.cpp  filter_producers.h
sound_processor copy/src/filters/: ampl_filter.h  bandpass_filter.h  generator_filters.cpp  highpass_filter.h  mute_filter.cpp  mute_filter.h  normalize_filter.cpp  reject_filter.cpp  silence_filter.h  timestretch_filter.cpp  timestretch_filter.h
sound_processor copy/src/pipeline/: pipeline.cpp
sound_processor copy/src/wav/: wav_headers.h  wav_io.h
sound_processor copy/tests/sound_processor_tests/: test_main.cpp  test_pipeline.cpp  test_waveform.cpp
sound_processor/src/app/: main.cpp
sound_processor/src/filter/: filter.h
sound_processor/src/filters/: ampl_filter.cpp  bandpass_filter.cpp  generator_filters.cpp  generator_filters.h  highpass_filter.cpp  lowpass_filter.cpp  lowpass_filter.h  mix_filter.cpp  mix_filter.h  normalize_filter.h  reject_filter.h  silence_filter.cpp
sound_processor/src/pipeline/: pipeline.h
sound_processor/src/wav/: wav_io.cpp
sound_processor/src/waveform/: waveform.cpp  waveform.h
sound_processor/tests/sound_processor_tests/: test_args_parser.cpp  test_filters.cpp  test_wav_io.cpp
